# dotlang

./: README.md  pyproject.toml
src/dotlang/: __init__.py  __main__.py  dotlang.py
