[project]
name = "dotlang"
version = "0.0.1"
authors = [
  { name="yusef", email="yusef314159@gmail.com" },
]
description = "Dotlang library"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = ["yulibrary"]

[project.urls]
"Homepage" = "https://github.com/uulum/dotlang"
"Bug Tracker" = "https://github.com/uulum/dotlang/issues"
